--- a/game3(야구게임 )최종.html
+++ b/game3(야구게임 )최종.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   
-    <title>game3re 0.9-야구 게임(2015124147 이명륜)</title>
+    <title>game3re 0.9-야구 게임</title>
    
     <script>
         var cwidth = 1200;
