--- a/game2(에어하키)최종.html
+++ b/game2(에어하키)최종.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>  game2 0.98 -에어하키게임 (2015124147 이명륜)</title>
+    <title>  game2 0.98 -에어하키게임 </title>
 </head>
 
 <body>
