--- a/기초문법/basic.html
+++ b/기초문법/basic.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <script>
-        document.write("hello world");
-    </script>
+    <script src="variable.js"></script>
 </head>
 <body>
     
