--- a/기초문법/basic.html
+++ b/기초문법/basic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <script src="object.js"></script>
+    <script src="object_BOM.js"></script>
 </head>
 <body>
     
