브라우저 객체

--- a/기초문법/basic.html
+++ b/기초문법/basic.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <script src="object_BOM.js"></script>
+    <script src="Function.js"></script>
 </head>
-<body>
+<body id="theBody">
+    <button onclick="changeColor();">배경색 바꾸기</button>
     
 </body>
 </html>
