--- a/기초문법/Function.html
+++ b/기초문법/Function.html
@@ -20,6 +20,13 @@
         // 정의된 함수인 경우 꼭 함수 호출문이 정의문 보다 아래에 있을 필요는 없음
         func();
         f();
+
+        
+        function calc(a,b){
+            return a+b;
+        }
+
+        document.writeln(calc(10,2));
         
     </script>
 </head>
