--- a/기초문법/jQuery/universalSelection.html
+++ b/기초문법/jQuery/universalSelection.html
@@ -7,13 +7,15 @@
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
     <script>
-        //제이쿼리 아이디 선택자를 이용해서 글자색을 바꾸기
+        //jQuery 전체 선택자
         $(function(){
-            $("#title").css("color","blue");
-        })
+            $("*").css("border","1px solid blue");
+        });
     </script>
 </head>
 <body>
-    <h1 id="title">제목</h1>
+    <h1>jQuery</h1>
+    <h1>선택자</h1>
+    <h1>전체 선택자</h1>
 </body>
 </html>
