간단한 선택자들

--- a/기초문법/jQuery/Selection/classSelection.html
+++ b/기초문법/jQuery/Selection/classSelection.html
@@ -8,13 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
     <script>
         $(function(){
-            $("#id1").css("border","3px solid green");
+            $(".classId").css("border","3px solid blue");
         });
     </script>
 </head>
 <body>
-    <h1>jQuery</h1>
-    <h1 id="id1">선택자</h1>
-    <h1 id>전체 선택자</h1>
+    <h1>no class</h1>
+    <h1 class="classId"> with class="classId"</h1>
+    <h1>no class</h1>
+    <h1 class="classId"> with class="classId". class can be duplicated</h1>
 </body>
 </html>
