--- a/기초문법/jQuery/Selection/tagNameSelection.html
+++ b/기초문법/jQuery/Selection/tagNameSelection.html
@@ -8,13 +8,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
     <script>
         $(function(){
-            $("#id1").css("border","3px solid green");
+            $("h2").css("border","3px solid blue");
         });
     </script>
 </head>
 <body>
-    <h1>jQuery</h1>
-    <h1 id="id1">선택자</h1>
-    <h1 id>전체 선택자</h1>
+    <h1> here is h1 tag</h1>
+    <h2> here is h2 tag</h2>
+    <h3> here is h3 tag</h3>
+    <h2> here is also h2 tag</h2>
+    
 </body>
 </html>
