기본 이벤트 차단 및 마우스 이벤트

--- a/기초문법/jQuery/Event/readyEvent.html
+++ b/기초문법/jQuery/Event/readyEvent.html
@@ -13,7 +13,7 @@
         })
 
         $(window).load(function(){
-            console.log("load");
+            console.log("loaded");
         })
     </script>
 </head>
