--- a/기초문법/jQuery/Selection/ArraySelection.html
+++ b/기초문법/jQuery/Selection/ArraySelection.html
@@ -14,6 +14,8 @@
                 {"area" : "daegu"}
             ]
             
+            //$("배열명").each(함수)
+        
             $(obj).each(function(i,o){
                 console.log(i+":",o);
                 // document.writeln(i+":"+o,"<br>");
